--- a/{{cookiecutter.repo_name}}/production.ini
+++ b/{{cookiecutter.repo_name}}/production.ini
@@ -12,7 +12,7 @@ pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 
-sqlalchemy.url = sqlite:///%(here)s/{{ cookiecutter.repo_name }}.sqlite
+sqlalchemy.url = postgresql://%(dbusername)s:%(dbpassword)s@productionhostname:5432/productiondatabasename
 
 ###
 # wsgi server configuration
