--- a/{{cookiecutter.repo_name}}/development.ini
+++ b/{{cookiecutter.repo_name}}/development.ini
@@ -14,7 +14,7 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = postgresql://%(dbusername)s:%(dbpassword)s@generic.cnqcddaitbd6.us-west-2.rds.amazonaws.com:5432/generic
+sqlalchemy.url = sqlite:///%(here)s/{{ cookiecutter.repo_name }}.sqlite
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
